--- a/index.html
+++ b/index.html
@@ -21,41 +21,47 @@
                 <p style="font-family:Noteworthy">Designed and Coded by Rbertille</p>
                 </div>
                 <form class="calculator">
-                    <div class="result"><input type="text" id="results" name="results" required></div>
-                    <div id="results" class="display-zero"></div>
+                    <div class="result">
+                    <!---<div id="results"></div>-->
+                    <!---<input type="text" name="results" style="width:300px; font-size:60px;color:#fff;"  required>-->
+                    <!--<p id="results"></p>-->
+                    
+                    <div id="results" class="display-zero">
+                    </div>
                     <!--<div class="display-zero">
                         <div id="results" class="display-zero">0</div>
-                        <div id="results" class="display-zero"><input type="text" id="results" name="results" required></div>
-                    </div>-->
+                        <div id="results" class="display-zero"><input type="text" id="results" name="results" required></div>-->
+                    <!---<p id="results"></p>-->
+                    </div>
                         <div class="button-calculator">
-                            <button type="button" id="clear" class="ac">AC</button>
-                            <button type="button" id="buttons" class="soustrandplus">+/-</button>
-                            <button type="button" id="buttons" class="pourcentage">%</button>
-                            <button type="button" id="buttons" class="division" style="background-color:#FF8C00">/</button>
+                            <button type="button" class="ac" value='ac' id='ac'>AC</button>
+                            <button type="button" class="soustrandplus" value='+/-'>+/-</button>
+                            <button type="button" class="pourcentage" value='%'>%</button>
+                            <button type="button" class="division" style="background-color:#FF8C00" value='/'>/</button>
                         </div>
                         <div class="calculator-button">
                             <div class="number-calculator">
-                                <button type="button" id="buttons" class="seven">7</button>
-                                <button type="button" id="buttons" class="eight">8</button>
-                                <button type="button" id="buttons" class="nine">9</button>
-                                <button type="button" id="buttons" class="multiplication" style="background-color:#FF8C00">X</button>
+                                <button type="button" class="seven" value='7'>7</button>
+                                <button type="button" class="eight" value='8'>8</button>
+                                <button type="button" class="nine"  value='9'>9</button>
+                                <button type="button" class="multiplication" style="background-color:#FF8C00" value='x'>X</button>
                             </div>
                             <div class="num-calculator">
-                                <button type="button" id="buttons" class="four">4</button>
-                                <button type="button" id="buttons" class="five">5</button>
-                                <button type="button" id="buttons"  class="six">6</button>
-                                <button type="button" id="buttons" class="soustraction" style="background-color:#FF8C00">-</button>
+                                <button type="button" class="four" value='4'>4</button>
+                                <button type="button" class="five" value='5'>5</button>
+                                <button type="button" class="six"  value='6'>6</button>
+                                <button type="button" class="soustraction" style="background-color:#FF8C00" value='-'>-</button>
                             </div>
                             <div class="num-calculator">
-                                <button type="button" id="buttons" class="one">1</button>
-                                <button type="button" id="buttons" class="two" class="two">2</button>
-                                <button type="button" id="buttons" class="three">3</button>
-                                <button type="button" id="buttons" class="plus" style="background-color:#FF8C00">+</button>
+                                <button type="button" class="one" value='1'>1</button>
+                                <button type="button" class="two" value='2'>2</button>
+                                <button type="button" class="three"  value='3'>3</button>
+                                <button type="button" class="plus" style="background-color:#FF8C00" value='+'>+</button>
                             </div>
                             <div class="num-calculator">
-                                <button type="button" id="buttons" class="zero">0</button>
-                                <button type="button" id="buttons" class="decimal">.</button>
-                                <button type="button" id="buttons" class="equal" style="background-color:#FF8C00">=</button>
+                                <button type="button" class="zero"  value='0'>0</button>
+                                <button type="button" class="decimal"  value='.'>.</button>
+                                <button type="button" class="equal" style="background-color:#FF8C00">=</button>
                             </div>
                         </div>
                 </form>
