--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
                         <div id="results" class="display-zero"><input type="text" id="results" name="results" required></div>-->
                     <!---<p id="results"></p>-->
                     </div>
-                        <div class="button-calculator" id="operation">
+                        <div class="button-calculator">
                             <button type="button" class="ac" value='ac' id='ac'>AC</button>
                             <button type="button" class="soustrandplus" value='+/-'>+/-</button>
                             <button type="button" class="pourcentage" value='%'>%</button>
-                            <button type="button" class="division" style="background-color:#FF8C00" value='/'>/</button>
+                            <button type="button" class="division" style="background-color:#FF8C00" onclick="myDivision()" value='/'>/</button>
                         </div>
                         <div class="calculator-button">
                             <div class="number-calculator">
-                                <button type="button" class="seven" value='7'>7</button>
-                                <button type="button" class="eight" value='8'>8</button>
-                                <button type="button" class="nine"  value='9'>9</button>
-                                <button type="button" class="multiplication" style="background-color:#FF8C00" value='x'>X</button>
+                                <button type="button" class="seven" id="numberNum">7</button>
+                                <button type="button" class="eight" id="numberNumber">8</button>
+                                <button type="button" class="nine"  id="numberNum">9</button>
+                                <button type="button" class="multiplication" onclick="myMultiplication()" style="background-color:#FF8C00">X</button>
                             </div>
                             <div class="num-calculator">
-                                <button type="button" class="four" value='4'>4</button>
-                                <button type="button" class="five" value='5'>5</button>
-                                <button type="button" class="six"  value='6'>6</button>
-                                <button type="button" class="soustraction" style="background-color:#FF8C00" value='-'>-</button>
+                                <button type="button" class="four" id="numberNumber">4</button>
+                                <button type="button" class="five" id="numberNum">5</button>
+                                <button type="button" class="six"  id="numberNumber">6</button>
+                                <button type="button" class="soustraction" onclick="mySoustraction()" style="background-color:#FF8C00">-</button>
                             </div>
                             <div class="num-calculator">
-                                <button type="button" class="one" value='1'>1</button>
-                                <button type="button" class="two" value='2'>2</button>
-                                <button type="button" class="three"  value='3'>3</button>
-                                <button type="button" class="plus" style="background-color:#FF8C00" value='+'>+</button>
+                                <button type="button" class="one" id="numberNum">1</button>
+                                <button type="button" class="two" id="numberNumber">2</button>
+                                <button type="button" class="three" id="numberNum">3</button>
+                                <button type="button" class="plus" onclick="myAddition()" style="background-color:#FF8C00">+</button>
                             </div>
                             <div class="num-calculator">
-                                <button type="button" class="zero"  value='0'>0</button>
-                                <button type="button" class="decimal"  value='.'>.</button>
-                                <button type="button" class="equal" style="background-color:#FF8C00" onclick="Calculate()">=</button>
+                                <button type="button" class="zero"  id="numberNumber">0</button>
+                                <button type="button" class="decimal">.</button>
+                                <button type="button" class="equal" style="background-color:#FF8C00" onclick="myCalcul()">=</button>
                             </div>
                         </div>
                 </form>
